archive/huginn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huginn
  namespace: huginn
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: huginn
  template:
    metadata:
      labels:
        app.kubernetes.io/name: huginn
    spec:
      containers:
        - name: huginn
          image: ghcr.io/stianmjo/huginn:v1.0.0 # renovate: datasource=docker depName=ghcr.io/stianmjo/huginn
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
