archive/huginn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huginn
  namespace: huginn
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: huginn
  ports:
    - name: http
      port: 80
      targetPort: 3000
